--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <p>Quando a música acabar ou cansar dela, aperte o botão</p>
 
-        <a href="../Peta/Sc2/index.html">
+        <a href="../Sc2/index.html">
             <button>Me Aperta</button>
         </a>
     </div>
